tests/parser/statement_assign_err4.expected
Syntax Error: line 5:
Unexpected token (TOK_NUM, '10'), likely missing a(n)  
  'TOK_ASSIGN' or
  'TOK_LPAREN' or
Possibly due to malformed or missing:
  Non-terminal: 'If Statement' or
  Non-terminal: 'While Statement' or
  Non-terminal: 'Write Statement' or
  Non-terminal: 'Read Statement' or
  Non-terminal: 'Case'
