tests/parser/statement_assign_err4.mtp
begin
	(*Bad Assignment 3 Missing assign statement*)

	(*assignment statement: with factor (constant)*)
	something 10;
end
.